<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_hint"
        app:iconTint="@color/on_brand"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sort"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_title"
        app:iconTint="@color/on_brand"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_discover"
        android:title="@string/discover_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings_title"
        app:showAsAction="never" />
</menu>
